terraform/backend/main.tf
provider "aws" {
  region = "ap-southeast-2"
}

# resource "aws_instance" "web" {
#   ami                    = "ami-010876b9ddd38475e"
#   instance_type          = "t2.micro"
#   vpc_security_group_ids = [aws_security_group.instance.id]

#   user_data = <<-EOF
#               #!/bin/bash
#               echo "Hello, World" > index.html
#               nohup busybox httpd -f -p ${var.server_port} &
#               EOF

#   user_data_replace_on_change = true

#   tags = {
#     Name = "aries-backend"
#   }
# }

terraform {
  backend "s3" {
    bucket = "aries-tf-state"
    key    = "global/backend/terraform.tfstate"
    region = "ap-southeast-2"

    dynamodb_table = "aries-tf-state-locks"
    encrypt        = true
  }
}

resource "aws_security_group" "instance" {
  name = "aries-backend-instance"

  ingress {
    from_port   = var.server_port
    to_port     = var.server_port
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_key_pair" "aries" {
  key_name   = "aries-key"
  public_key = file("~/.ssh/aries-key.pub")
}

# setup EC2 instances that can be controlled by AWS auto scaling group
resource "aws_launch_template" "aries" {
  instance_type = "t2.micro"
  image_id      = "ami-010876b9ddd38475e"
  name_prefix   = "aries-backend"

  key_name = aws_key_pair.aries.key_name

  user_data = <<-EOF
              #!/bin/bash

              #install JRE
              sudo apt-get update
              sudo apt-get install -y openjdk-21-jre-headless
              sudo apt-get install -y unzip curl

              # Install AWS CLI v2
              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
              unzip awscliv2.zip
              ./aws/install

              #inject database connection string
              echo 'SPRING_MONGODB_URI="${var.SPRING_MONGODB_URI}"' | sudo tee -a /etc/environment

              echo -e "Aries Backend:\n" > index.html
              echo -e "Java version: $(java -version 2>&1 | head -n 1)" >> index.html

              #Download Aries-jar
              aws s3 cp s3://aries-springboot-jar/aries_jar /home/ubuntu/aries-backend.jar

              #run 
              nohup java -jar /home/ubuntu/aries-backend.jar --server.port=${var.server_port} --spring.profiles.active=prod > /home/ubuntu/app.log 2>&1 &

              #nohup busybox httpd -f -p ${var.server_port} &
              EOF        
  

  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_profile.name
  }

  network_interfaces {
    security_groups             = [aws_security_group.instance.id]
    associate_public_ip_address = true
  }
  lifecycle {
    create_before_destroy = true
  }
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

data "aws_instances" "aries_asg" {
  filter {
    name   = "tag:Name"
    values = ["aries-backend"]
  }
}

# NOT NEEDED ATM,setup auto-scaling group to manage those EC2 instances https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/autoscaling_group
resource "aws_autoscaling_group" "aries" {
  launch_template {
    id      = aws_launch_template.aries.id
    version = "$Latest"
  }

  vpc_zone_identifier = data.aws_subnets.default.ids

  target_group_arns = [aws_lb_target_group.asg.arn]
  health_check_type = "ELB"

  min_size = 1
  max_size = 1

  tag {
    key                 = "Name"
    value               = "aries-backend"
    propagate_at_launch = true
  }
}

#setup AWS load balancer for those EC2 instances
resource "aws_lb" "aries" {
  name               = "aries-backend"
  load_balancer_type = "application"
  subnets            = data.aws_subnets.default.ids
  security_groups    = [aws_security_group.alb.id]
}

#setup AWS load balancer listener
resource "aws_lb_listener" "http" {
  port              = var.server_port
  protocol          = "HTTP"
  load_balancer_arn = aws_lb.aries.arn

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404: page not found"
      status_code  = 404
    }
  }
}

#configure AWS load balancer to allow traffic from what is defined below
resource "aws_security_group" "alb" {
  name = "aries-alb"

  # Allow inbound HTTP requests
  ingress {
    from_port   = var.server_port
    to_port     = var.server_port
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  # SSH access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # safer
  }

  # Allow all outbound request
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#configure AWS load balancer to route to healthy instance
resource "aws_lb_target_group" "asg" {
  name     = "aries-asg"
  port     = var.server_port
  protocol = "HTTP"
  vpc_id   = data.aws_vpc.default.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 15
    timeout             = 3
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 100

  condition {
    path_pattern {
      values = ["*"]
    }
  }

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  }
}
